# hello-world-glyphon

./: Cargo.toml  azure-pipelines.yml  build.rs
benches/: prepare.rs
res/: WIGhat.mtl
src/: camera.rs  cameracontroller.rs  console.rs  lib.rs  light.rs  main.rs  model.rs  rendering.rs  resources.rs  shader.wgsl  texture.rs  vertex.rs  window_state.rs
src/common/: utils.rs
src/shaders/: light.wgsl  shader.wgsl
src/structs/: block.rs
src/wig_geo/: block_vertex.rs  vertex_instance.rs
