[package]
name = "WGPU-Sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
#Should be in build dep 
anyhow = "1.0"
instant = "0.1"
fs_extra = "1.2"
reqwest = { version = "0.11", features = ["json"] }
# glob = "0.3"
############
cfg-if = "1.0"
glyphon = "0.7.0"
wgpu = { version = "23", default-features = false, features = ["wgsl"] }
etagere = "0.2.10"
winit = "0.30.3"
env_logger = "0.10"
cosmic-text = "0.12"
pollster = "0.4.0"
lru = { version = "0.12.1", default-features = false }
rustc-hash = "2.0"
log = "0.4.22"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"
# Other dependencies
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dev-dependencies]
glyphon = "0.7.0"
wgpu = { version = "23", default-features = false, features = ["wgsl"] }
winit = "0.30.3"
resvg = { version = "0.44", default-features = false }
pollster = "0.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prepare"
harness = false

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
name = "wgpu_sandbox"
path = "src/lib.rs"